# moneybot

./: .envrc.template  .gitignore  pyproject.toml
money_project_bot/: call.py  dummy.py  handlers.py  main.py  response.py  settings.py
